resources/public/style.css
/* ... */
body {
    margin-top: -2px;  /* keep from having scrollbar */
    display: flex;
    flex-direction: column;
    height: 100vh;
    overflow-y: hidden;
}

#app {
    flex: 0 1 auto;
    display: flex;
    flex-direction: row;
}

#root {
    width: 100vw;
}

#root > .table {
    max-width: 100%;
    padding-right: 10px;
}

#root.wrapped-element, #root.item {
    width: 100%;
    flex: 0 1 auto;
    overflow-x: hidden;
    overflow-y: auto;
    margin: 0;
}

.selected {
    box-shadow: inset 0 0 5px 3px hsla(220, 100%, 55%, 1);
}

/* In general, if there is a border, there is a matching negative margin
   on the right and bottom. That allows boxes to stack. Containment may
   require additional negative margins on the top and left.

   Usually, the border is set by the containing DOM element, but sometimes
   it is set explicitly. */
.bordered {
    border-width: 2px;
    margin: 0px -2px -2px 0px;
}

/* --- Generic indentation --- */

.indent-wrapper {
    display: flex;
    flex-direction :column;
    padding-left: 8px;
}

.indent-wrapper > * {
    flex-grow: 1;
}

/* --- Basic items and stacks of items --- */

.item.editable, .item > .editable { 
    padding: 3px;
}

.item.with-elements > :last-child {
    margin: 0px 5px 5px 6px;
}

.editable {
    min-height: 15px; /* Make no-content cells have minimum height */
    min-width: 7px;
}

.content-text {
    min-height: 20px;
    overflow-wrap: break-word;
}

.content-text.placeholder {
    height: 13px;
    min-height: 0px;
    line-height: 0px;
    flex-grow: 0;
    padding: 0;
    overflow-wrap: break-word;
}

/* grayish indicators of places where there is no current content */
.editable:not(.content-text) {
    background-color: hsl(0, 0%, 95%);
}

.vertical-stack > .item {
    margin: 0px 3px 0px 3px;
}

.vertical-item-stack > .item.editable, .vertical-stack > .item > .editable { 
    padding: 3px 0px 3px 0px;
}

.vertical-stack > .item.with-elements > :last-child {
    margin: 0px 2px 5px 3px;
}

.vertical-stack > .item + .item {
    border-width: 1px 0px 0px 0px;
}

.for-multiple, .for-multiple > .vertical-item-stack {
    vertical-align: middle;
}

.vertical-stack {
    vertical-align: top;
}

.with-elements {
    text-align: left;
}

.elements-wrapper {
    padding: 3px 3px 3px 5px;
}

.horizontal-stack {
    display: flex; /* horizontal is default */
}

.horizontal-stack > *:not(:last-child) {
    margin-right: 2px;
}

/* --- tabs --- */

.tabbed {
    display: flex;
    flex-direction: column;
}

.tabs-wrapper {
    display: block;
}

.tabs-holder, .tab-sequence {
    vertical-align: bottom;
    flex: none;
    display: inline-flex;
    align-items: stretch;
    z-index: 1;  /* Make the ::before and ::after borders go in front */
    position:relative;  /* Make the z-index effective */
    /* The tabs are give in reverse order, so the logically first tab will
       come on top in the stacking order. */
    flex-direction: row-reverse;
    justify-content: flex-end;
}

.tabs-holder {
    margin-left: 3px; /* For left end of first tab */
}

.tab-tree {
    background-color: white;
}

.multi-tab {
    text-align: center;
}

.tab {
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    text-align: center;
    border-top-width: 2px;
    border-bottom-width:2px;
    margin-left: 12px;
    margin-right: 12px;
    min-width: 20px;
    width: fit-content;
    position: relative;
}

.tab::before, .tab::after{
    height: 100%;
    /* Make its background override edges of on other tabs, but not content. */
    width: 30px;
    background-color: white;
    z-index: -1;    
    border-style: solid;
    border-color: hsl(0, 0%, 80%);
    display: block;
    content:" ";
    top: -2px;
    position: absolute;
    transform-origin: top;
}

.tab::before {
    border-width: 2px 0px 2px 2px;
    border-top-left-radius: 7px;
    left: -8px;
    transform:skewX(-15deg);
}

.tab::after {
    border-width: 2px 2px 2px 0px;
    border-top-right-radius: 7px;
    right: -8px;
    transform:skewX(15deg);
}

.tab.vertical-stack {
    /* Leave room for selection box-shadow. */
    padding-top: 2px;
}

.tab.empty-child.empty-child.empty-child.empty-child {
    background-color: transparent;
    width: 40px;
}

.tab.virtualTab, .tab.virtualTab::before, .tab.virtualTab::after { 
     background-color: hsl(0, 0%, 95%);
}

.tab.virtualTab {
    position: relative;
}

.tab.complex {
    background-color: transparent;
    width: 150px;
}

.tab.chosen, .tab-tree.chosen {
    z-index: 2;
}

.tab.chosen {
    box-shadow: inset 0px 2px hsl(0, 0%, 80%);
    border-bottom: 0px;
}

.tab.chosen.selected {
    box-shadow: inset 0px 2px hsl(0, 0%, 80%),
}

 /* Put the selected box shadow on the select holder, because the :left and
    :right of the tab can overlap its contents. */
.tab.chosen > .select_holder {
    box-shadow: inset 0 0 5px 3px hsla(220, 100%, 55%, 1);
}

.tab.chosen::before {
    box-shadow: inset 2px 2px hsl(0, 0%, 80%);
    border-bottom: 0px;
}

.tab.chosen::after {
    box-shadow: inset -2px 2px hsl(0, 0%, 80%);
    border-bottom: 0px;
}

/* batch editing */

.quit-batch-edit.tool {
    font-size: 20px;
    width: auto;
    height: auto;
    text-align: center;
    background-color: hsl(0, 0%, 95%);
    border-width: 1px;
    border-radius: 2px;
    border-color: hsl(0, 0%, 75%);
    padding: 0px 2px 0px 2px;
    margin: 0px 7px 2px 7px;
    display: inline-block;
}

/* Three copies, so our definition of margin wins out. */
.batch-selected.batch-selected.batch-selected {
    box-shadow: 0 0 0 2px hsl(220, 100%, 70%),
                4px 4px white, 6px 6px hsl(220, 70%, 65%),
                8px 8px white, 10px 10px hsl(220, 40%, 60%);
    margin: 0px 10px 10px 0px;
    z-index: 1;
}

.batch-query-match-counts {
    margin-top: 4px;
    margin-bottom: 2px;
    text-align: center;
    color: hsl(220, 100%, 45%);
    font-weight: bold;
}
/* ... */

